<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_set_to_top"
        android:title="@string/action_set_to_top"
        android:orderInCategory="10"
        />
    <item
        android:id="@+id/action_canel_set_to_top"
        android:title="@string/action_cancel_to_top"
        android:orderInCategory="10"
        android:visible="false"
        />
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:orderInCategory="10"
        />
    <item
        android:id="@+id/action_remind"
        android:title="@string/action_remind"
        android:orderInCategory="20"
        />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="80"
        />
    <item
        android:id="@+id/action_remove"
        android:title="@string/action_remove"
        android:orderInCategory="100"
        />

</menu>