<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        android:icon="@mipmap/share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/add_change_word_color"
        android:title="@string/action_change_word_color"
        android:icon="@mipmap/change_word_color_normal"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/add_finish"
        android:title="@string/action_finish"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/add_delete"
        android:title="@string/action_remove"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/add_change_to_pic"
        android:title="@string/action_pic"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/change_background"
        android:title="@string/action_change_background"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete_background"
        android:title="@string/action_delete_background"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>