<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".Ui.MainActivity">

    <item
        android:id="@+id/action_new"
        android:title="@string/action_new"
        android:orderInCategory="100"
        android:icon="@mipmap/send"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_update"
        android:title="@string/action_update"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="50"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="50"
        app:showAsAction="never"
        />
</menu>
